--- a/ArchiveThis/ArchiveThis.csproj
+++ b/ArchiveThis/ArchiveThis.csproj
@@ -11,7 +11,16 @@
     <PackageReference Include="czf.apiwrappers.waybackmachine" Version="2.1.2" />
     <PackageReference Include="LiteDB" Version="5.0.17" />
     <PackageReference Include="LiteDB.Async" Version="0.1.7" />
+    <PackageReference Include="Mastonet" Version="2.3.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+     <Content Include="config.json">
+         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+     </Content>
+
   </ItemGroup>
 
 </Project>
