--- a/ArchiveThis/ArchiveThis.csproj
+++ b/ArchiveThis/ArchiveThis.csproj
@@ -12,8 +12,11 @@
     <PackageReference Include="LiteDB" Version="5.0.17" />
     <PackageReference Include="LiteDB.Async" Version="0.1.7" />
     <PackageReference Include="Mastonet" Version="2.3.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="NReco.Logging.File" Version="1.1.7" />
   </ItemGroup>
 
   <ItemGroup>
