Check history for already requested URls

--- a/ArchiveThis/config/config.json
+++ b/ArchiveThis/config/config.json
@@ -5,7 +5,7 @@
     "Sites":[
         {
             "Domain":"abendblatt.de",
-            "FailureContent":"du doof"
+            "FailureContent":"Zur PLUS-Anmeldung"
         },
         {
             "Domain":"zecken.biz",
