--- a/ArchiveThis/ArchiveThis.csproj
+++ b/ArchiveThis/ArchiveThis.csproj
@@ -5,10 +5,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Copyright>Build ($([System.DateTime]::UtcNow.ToString("s")))</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="czf.apiwrappers.waybackmachine" Version="2.1.2" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
     <PackageReference Include="LiteDB" Version="5.0.17" />
     <PackageReference Include="LiteDB.Async" Version="0.1.7" />
     <PackageReference Include="Mastonet" Version="2.3.1" />
