simplify archiveThis-Bot

--- a/ArchiveThis/Dockerfile
+++ b/ArchiveThis/Dockerfile
@@ -1,6 +1,8 @@
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /App
 
+RUN apt-get -y update && apt-get -y upgrade && apt-get install -y --no-install-recommends ffmpeg
+
 # Copy everything
 COPY . ./
 # Restore as distinct layers
